codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__composer_cursor_tracks_word_wrapped_single_line_prompt.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex                                                        ┌───────┬──────┬──────┬──────┐
                                                                     │  1S   │  2W  │ 3Set │4Help │
                                                                     └───────┴──────┴──────┴──────┘
 Conversation
 system: Better Codex app shell                                      Sessions
 you: Create a divergent standalone TUI.                             unfocused active 0 shown
                                                                     loading sessions
 codex: Started a fullscreen app shell backed by app-server turns.
 plan: 1. Build shell                                                Tools
       2. Wire transcript                                            in progress exec just test ...
       3. Render dashboard                                           completed file changes in a...

 ▌ tool exec just test -p codex-tui                                  Thread
                                                                     stage-one
 ▌ edited 3 files +128 -24                                           id 01900000-0000-7000-8000-...
                                                                     resume, fork, archive, delete
 codex: The new shell owns the fullscreen surface.
                                                                     Status
                                                                     thinking

                                                                     Plan
                                                                     Build the standalone shell in
 Composer ready 1:83                                                 slices.
 > This deliberately long one-line prompt wraps before the final     x Shell frame
 words on another row                                                > Transcript model
