codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__ctrl_d_hides_dashboard_and_reclaims_layout_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

  Dashboard  ◆ BC           gpt-5-codex ▾   default ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ YOU  Create a divergent standalone TUI.                                  ┃
                                                                            ┃
 ▎ CODEX  Started a fullscreen app shell backed by app-server turns.        ┃
 ▎ PLAN  1. Build shell                                                     ┃
         2. Wire transcript                                                 ┃
         3. Render dashboard                                                ┃
                                                                            ┃
 ▌ tool exec just test -p codex-tui                                         ┃
                                                                            ┃
 ▌ edited 3 files +128 -24                                                  ┃
                                                                            ┃
 ▎ CODEX  The new shell owns the fullscreen surface.                        ┃

╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                             │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
