codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__ctrl_number_tabs_focus_only_after_selecting_route_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
──────────────────────────────────────────────────│────────────────────────────────━━━━━━━━━━━─────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎○ CLICK TO FOCUS  MODEL  3 fields
 ▎ YOU  Create a divergent standalone TUI.        │▎Model │ Permissions │ Appearance │ Integrations
                                                  │▎━━━━━━━────────────────────────────────────────
 ▎ CODEX  Started a fullscreen app shell backed   │▎› Model: gpt-5-codex
          by app-server turns.                    │▎  Reasoning: default
 ▎ PLAN  1. Build shell                           │▎  Service tier: default
         2. Wire transcript                       │
         3. Render dashboard                      │▎◆ MODEL
                                                  │▎gpt-5-codex
 ▌ tool exec just test -p codex-tui               │
                                                  │▎◆ TOKENS
 ▌ edited 3 files +128 -24                        │▎total 1k
                                                  │▎input 1k
 ▎ CODEX  The new shell owns the fullscreen       │▎output 240
          surface.                                │▎Context 100% left
                                                  │
                                                  │▎◆ INTEGRATIONS
╭────────────────────────────────────────────────╮│▎mcp not loaded
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37││▎plugins not loaded
│> Summarize the new shell architecture          ││
│                                                ││▎◆ WORKSPACE
│                                                ││▎cwd /workspace/better-codex
╰────────────────────────────────────────────────╯│
