codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__dashboard_settings_tab_click_without_focus.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │ Settings │ Agents │ Workspace │ Sessions │ Help
──────────────────────────────────────────────────│━━━━━━━━━━──────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
 ▎ YOU  Create a divergent standalone TUI.        │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5-codex
 ▎ CODEX  Started a fullscreen app shell backed   │▎  Reasoning: default
          by app-server turns.                    │▎  Service tier: default
 ▎ PLAN  1. Build shell                           │
         2. Wire transcript                       │▎◆ MODEL
         3. Render dashboard                      │▎gpt-5-codex
                                                  │
 ▌ tool exec just test -p codex-tui               │▎◆ TOKENS
                                                  │▎input 1k | output 240
 ▌ edited 3 files +128 -24                        │▎Context 100% left
                                                  │
 ▎ CODEX  The new shell owns the fullscreen       │▎◆ INTEGRATIONS
          surface.                                │▎mcp not loaded
                                                  │▎plugins not loaded
                                                  │
╭────────────────────────────────────────────────╮│▎◆ WORKSPACE
│◆ MESSAGE  1:37                                 ││▎cwd /workspace/better-codex
│> Summarize the new shell architecture          ││▎profile managed
│                                                ││▎files restricted, net restricted
│                                                ││▎roots none selected
╰────────────────────────────────────────────────╯│
