codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__dashboard_shortcut_styling.snap
---
source: tui/src/app_shell_tests.rs
expression: "&styled[..2]"
---
[
    Line::from_iter([
        Span::from("◆ ").fg(Color::Rgb(187, 154, 247)),
        Span::from("COMPOSER").fg(Color::Rgb(187, 154, 247)).bold(),
        Span::from("                             "),
        Span::from("│ ").fg(Color::Rgb(65, 72, 104)),
        Span::from("◆ ").fg(Color::Rgb(187, 154, 247)),
        Span::from("DASHBOARD").fg(Color::Rgb(187, 154, 247)).bold(),
    ]),
    Line::from_iter([
        Span::from(" Cmd ←/→/⌫          ").fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(36, 40, 59)).bold(),
        Span::from(" "),
        Span::from("Line boundary"),
        Span::from("     "),
        Span::from("│ ").fg(Color::Rgb(65, 72, 104)),
        Span::from(" Ctrl+1 / Ctrl+2    ").fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(36, 40, 59)).bold(),
        Span::from(" "),
        Span::from("Status / Agents"),
    ]),
]
